[package]
name = "hsm-jaamlong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tracing = "0.1.35"
serde = { version = "1.0.159", features = ["derive"] }
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.0", features = ["cors"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "bigdecimal", "macros", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0.72"
uuid = {version = "1.4.1", features = ["serde", "v5"]}
web3 = "0.19.0"
secp256k1 = "0.27.0"
rlp = "0.5.2"
axum-extra = { version = "0.7.7", features = ["cookie"] }
jsonwebtoken = "8.3.0"
serde_json = "1.0.107"
